# cmake-haiku

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
res/: cmake-haiku  cmake-haiku.rdef
src/: cmake-app.hpp  cmake-window.cpp  cmake-window.hpp  cmake.cpp  main.cpp  main.hpp
